Fixed mobile styling on header so it looks like there's less white space between the nav bar and call to action container.

--- a/css/about.css
+++ b/css/about.css
@@ -183,6 +183,70 @@ strong {
     border-bottom: 1px solid #162b32;
   }
 }
+.header-container {
+  background-image: url(../img/header-img.jpeg);
+  background-attachment: fixed;
+  max-width: 100%;
+  /* height: 1000px; */
+  height: 90rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 650px) {
+  .header-container {
+    height: 110rem;
+    justify-content: flex-start;
+  }
+}
+.header-container .cta-container {
+  background: rgba(53, 57, 58, 0.81);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50rem;
+  height: 41rem;
+  padding: 2rem;
+  padding-bottom: 0;
+}
+@media (max-width: 650px) {
+  .header-container .cta-container {
+    width: 100%;
+    height: 47%;
+  }
+}
+.header-container .cta-container h1 {
+  font-size: 4.8rem;
+  text-align: center;
+  color: #c2c7cd;
+  line-height: 5.5rem;
+}
+.header-container .cta-container p {
+  font-size: 3.8rem;
+  text-align: center;
+  margin-top: 1rem;
+  color: #c2c7cd;
+  line-height: 5rem;
+}
+.header-container .cta-container .cta-btn {
+  align-self: center;
+  background-color: #c2c7cd;
+  color: #162b32;
+  margin-top: 1rem;
+  padding: 1rem 3rem;
+  border: none;
+  font-size: 3rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+.header-container .cta-container .cta-btn:hover {
+  background-color: #162b32;
+  color: #c2c7cd;
+}
 nav {
   position: fixed;
   right: 1rem;
@@ -253,69 +317,6 @@ nav .fa-arrow-down {
 nav span {
   font-size: 2.8rem;
   color: #162b32;
-}
-.header-container {
-  background-image: url(../img/header-img.jpeg);
-  background-attachment: fixed;
-  max-width: 100%;
-  /* height: 1000px; */
-  height: 90rem;
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-@media (max-width: 650px) {
-  .header-container {
-    height: 110rem;
-  }
-}
-.header-container .cta-container {
-  background: rgba(53, 57, 58, 0.81);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50rem;
-  height: 41rem;
-  padding: 2rem;
-  padding-bottom: 0;
-}
-@media (max-width: 650px) {
-  .header-container .cta-container {
-    width: 100%;
-    height: 47%;
-  }
-}
-.header-container .cta-container h1 {
-  font-size: 4.8rem;
-  text-align: center;
-  color: #c2c7cd;
-  line-height: 5.5rem;
-}
-.header-container .cta-container p {
-  font-size: 3.8rem;
-  text-align: center;
-  margin-top: 1rem;
-  color: #c2c7cd;
-  line-height: 5rem;
-}
-.header-container .cta-container .cta-btn {
-  align-self: center;
-  background-color: #c2c7cd;
-  color: #162b32;
-  margin-top: 1rem;
-  padding: 1rem 3rem;
-  border: none;
-  font-size: 3rem;
-  font-weight: bold;
-  cursor: pointer;
-}
-.header-container .cta-container .cta-btn:hover {
-  background-color: #162b32;
-  color: #c2c7cd;
 }
 footer {
   width: 50%;
