--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,6 +17,76 @@
     }
 }
 
+.header-container{
+    background-image: url(../img/header-img.jpeg);
+    background-attachment: fixed;
+    max-width: 100%;
+    /* height: 1000px; */
+    height: 90rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @media @mobile{
+        height: 110rem;
+        justify-content: flex-start;
+    }
+
+    .cta-container{
+        background: rgba(53, 57, 58, 0.81);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 50rem;
+        height: 41rem;
+        padding: 2rem;
+        padding-bottom: 0;
+
+        @media @mobile{
+            width: 100%;
+            height: 47%;
+        }
+
+        h1{
+            font-size: 4.8rem;
+            text-align: center;
+            color: @accent-color;
+            line-height: 5.5rem;
+        }
+
+        p{
+            font-size: 3.8rem;
+            text-align: center;
+            margin-top: 1rem;
+            color: @accent-color;
+            line-height: 5rem;
+        }
+
+        .cta-btn{
+            align-self: center;
+            background-color: @accent-color;
+            color: @main-color;
+            margin-top: 1rem;
+            padding: 1rem 3rem;
+            border: none;
+            font-size: 3rem;
+            font-weight: bold;
+            cursor: pointer;
+           
+        }
+
+        .cta-btn:hover{
+            background-color: @main-color;
+            color: @accent-color;
+            
+        }
+    }
+}
+
 nav{
     position: fixed;
     right: 1rem;
@@ -83,26 +153,6 @@ nav{
         transition: all .5s;
     }
 
-    // .dropdown:hover{
-    //     background: @main-color;
-    //     transition: all .5s;
-    // }
-
-    // .dropdown:hover .fa-arrow-down{
-    //     color: @accent-color;
-    //     transition: all .5s;
-    // }
-
-    // .dropdown:hover .nav-text{
-    //     color: @accent-color;
-    //     transition: all .5s;
-    // }
-
-
-    // .dropdown:hover .dropdown-content{
-    //     display: block;
-    // }
-
     .dropdown-content:hover .dropdown-content{
         display: block;
     }
@@ -118,73 +168,3 @@ nav{
         color: @main-color;
     }
 }
-
-.header-container{
-    background-image: url(../img/header-img.jpeg);
-    background-attachment: fixed;
-    max-width: 100%;
-    /* height: 1000px; */
-    height: 90rem;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    @media @mobile{
-        height: 110rem;
-    }
-
-    .cta-container{
-        background: rgba(53, 57, 58, 0.81);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 50rem;
-        height: 41rem;
-        padding: 2rem;
-        padding-bottom: 0;
-
-        @media @mobile{
-            width: 100%;
-            height: 47%;
-        }
-
-        h1{
-            font-size: 4.8rem;
-            text-align: center;
-            color: @accent-color;
-            line-height: 5.5rem;
-        }
-
-        p{
-            font-size: 3.8rem;
-            text-align: center;
-            margin-top: 1rem;
-            color: @accent-color;
-            line-height: 5rem;
-        }
-
-        .cta-btn{
-            align-self: center;
-            background-color: @accent-color;
-            color: @main-color;
-            margin-top: 1rem;
-            padding: 1rem 3rem;
-            border: none;
-            font-size: 3rem;
-            font-weight: bold;
-            cursor: pointer;
-           
-        }
-
-        .cta-btn:hover{
-            background-color: @main-color;
-            color: @accent-color;
-            
-        }
-    }
-}
-
